<resources>
    <string name="app_name">Goal Master</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_goal_title">Create Goal</string>
    <string name="save_button_text">Save</string>
    <string name="create_button_text">Create</string>
    <string name="name_placeholder">Name</string>
    <string name="create_goal_default_duration_hint">Default Duration</string>
    <string name="create_goal_due_date_input_hint">Due Date</string>
    <string name="description_placeholder">Description</string>
    <string name="due_date_picker_dialog_title">Due date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_goals_label">Goals</string>
    <string name="no_goals">No Goals</string>
    <string name="no_tasks">No Tasks</string>
    <string name="create_goal_button_content_description">Create Goal</string>
    <string name="create_goal_total_units_hint">Total Units</string>
    <string name="create_goal_update_value_hint">Update value</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="never">Never</string>
    <string name="just_now">Just now</string>
    <string name="progress_values_separator">/</string>
    <string name="edit_goal_title">Edit Goal</string>
    <string name="edit_goal_completed_hint">completed</string>
    <string name="goal_menu_option_edit">Edit</string>
    <string name="goal_menu_option_delete">Delete</string>
    <string name="goal_menu_edit_option">Edit</string>
    <string name="goal_menu_option_close">Close</string>
    <string name="dod_placeholder">Definition of Done</string>
    <string name="create_task_button_content_description">Create Task</string>
    <string name="more_info_on_the_task_button_content_desc">More info on the task</string>
    <string name="task_view_back_button_cd">Task view back button</string>
    <string name="edit_button_in_task_view_cd">Edit button in task view</string>
    <string name="plan_button_text">Plan</string>
    <string name="done_button_text">Done</string>
    <string name="task_created_title_text">Created</string>
    <string name="create_a_plan_button_text">Create a plan</string>
    <string name="no_plans_image_cd">No plans image</string>
    <string name="no_plans_text">No Plans</string>
    <string name="current_plan_title">Current Plan</string>
    <string name="plan_task_options_cd">plan task options</string>
    <string name="create_task_title">Create Task</string>
    <string name="task_unit_size_placeholder">Unit size</string>
    <string name="create_goal_total_hint">Total unit</string>
    <string name="bottom_navigation_planner_label">Planner</string>
    <string name="view_goal_back_button_text">Back</string>
    <string name="edit_button_text">Edit</string>
    <string name="view_goal_created_title">Created</string>
    <string name="view_goal_due_date_title">Due date</string>
    <string name="duration_placeholder">Duration</string>
    <string name="task_duration_picker_dialog_title">Task duration</string>
    <string name="create_task_goal_name">Goal</string>
    <string name="task_dod_title">DoD:</string>
    <string name="view_task_dod_title">DoD</string>
    <string name="view_task_description_title">Description</string>
    <string name="event_duration_title">Event duration</string>
    <string name="event_time_title">Planned on</string>
    <string name="all_string">All</string>
    <string name="edit_Task_title">Edit Task</string>
    <string name="delete_button_text">Delete</string>
    <string name="create_plan_title">Create Plan</string>
    <string name="date_input_hint">Date</string>
    <string name="time_input_hint">Time</string>
    <string name="start_date_title">Start Date</string>
    <string name="end_date_title">End Date</string>
    <string name="start_date_picker_dialog_title">Start Date</string>
    <string name="end_date_picker_dialog_title">End Date</string>
    <string name="start_time_picker_dialog_title">Start Time</string>
    <string name="end_time_picker_dialog_title">End Time</string>
    <string name="add_task_to_plan">Add task to plan</string>
    <string name="lock_button_text">Lock</string>
    <string name="plan_locked_toast">Plan locked</string>
    <string name="lock_plan_dialog_title">Lock Plan</string>
    <string name="lock_plan_dialog_message">Do you want to lock the plan?</string>
    <string name="cancel_plan_dialog_title">Cancel plan</string>
    <string name="cancel_plan_dialog_message">Do you want to cancel the plan?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="plan_canceled_toast">Plan cancelled</string>
    <string name="task_planner_title">Plan Task</string>
    <string name="planned_task_delete_button">Planned task delete button</string>
    <string name="planned_task_view_button">Planned task view button</string>
    <string name="complete_plan_dialog_title">Mark plan as Complete</string>
    <string name="complete_plan_dialog_message">Do you want to mark the plan as Complete?</string>
    <string name="plan_done_toast">Plan done</string>
    <string name="task_planned_on_title">Task date</string>
    <string name="review_and_plan_image_cd">Review and Plan</string>
    <string name="review_and_plan_text"><![CDATA[Let\'s Review\n & Plan]]></string>
    <string name="start">Start</string>
    <string name="exit_review_and_plan_button_cd">Exit review and plan page</string>
    <string name="next_button_text">Next</string>
    <string name="review_and_plan_banner_text">Review and Plan</string>
    <string name="reminders_notification_channel_id">gm_general</string>
    <string name="title_notification_reminder">Goal Master</string>
    <string name="description_notification_reminder">Let\'s Review and </string>
    <string name="reminders_notification_channel_name">Goal Master</string>
    <string name="archive_button_text">Archive</string>
    <string name="unarchive_button_text">Unarchive</string>
    <string name="bottom_navigation_analytics_label">Analytics</string>
    <string name="select_task">Select Task</string>
    <string name="copy_button">Copy Button</string>
    <string name="bottom_navigation_settings_label">Settings</string>


    <string-array name="goal_states_array">
        <item>Active</item>
        <item>Archived</item>
        <item>Completed</item>
    </string-array>

    <string-array name="task_states_array">
        <item>Active</item>
        <item>Completed</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="task_tab_text">Task</string>
    <string name="todo_tab_text">Todo</string>
</resources>