<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationPlanner"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/bottom_navigation_planner_label"/>
    <item
        android:id="@+id/navigationGoals"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_flag_circle_24"
        android:title="@string/bottom_navigation_goals_label"
        />
    <item
        android:id="@+id/navigationAnalytics"
        android:enabled="true"
        android:icon="@drawable/baseline_bar_chart_24"
        android:title="@string/bottom_navigation_analytics_label"
        />
    <item
        android:id="@+id/navigationSettings"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/bottom_navigation_settings_label"
        />
</menu>