<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.goalmaster.goal.view.edit.EditGoalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/editGoalAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/editGoalToolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_detail_back_no_circle"
                app:title="@string/edit_goal_title"
                tools:title="@string/edit_goal_title">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editGoalSaveButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/save_button_text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editGoalAppbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editGoalNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/name_placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editGoalNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="no"
                        android:background="@color/fluorescent_grey"
                        android:inputType="textCapSentences"
                        android:text="@={vm.name}"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editGoalTotalInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:enabled="false"
                    android:hint="@string/create_goal_total_hint"
                    app:layout_constraintTop_toBottomOf="@id/editGoalNameInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editGoalTotalInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/fluorescent_grey"
                        android:inputType="number"
                        android:text="@={vm.total}"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editGoalCompletedInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/edit_goal_completed_hint"
                    app:layout_constraintTop_toBottomOf="@id/editGoalTotalInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editGoalCompletedInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/fluorescent_grey"
                        android:inputType="number"
                        android:text="@={vm.completed}"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editGoalDodInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/dod_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/editGoalCompletedInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editGoalDodInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/fluorescent_grey"
                        android:inputType="textCapSentences"
                        android:text="@={vm.dod}"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editGoalDueDateInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/create_goal_due_date_input_hint"
                    app:layout_constraintTop_toBottomOf="@id/editGoalDodInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editGoalDueDateInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/fluorescent_grey"
                        android:focusable="false"
                        android:dateInput="@{vm.dueDate}"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editGoalDescriptionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/description_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="150"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editGoalDueDateInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:autofillHints="no"
                        android:background="@color/fluorescent_grey"
                        android:text="@={vm.description}"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:layout_constraintTop_toBottomOf="@id/editGoalDescriptionInputLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editGoalDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/oval_background_1"
                    android:elevation="8dp"
                    android:paddingStart="110dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="110dp"
                    android:paddingBottom="15dp"
                    android:text="@string/delete_button_text"
                    app:backgroundTint="@color/space_cadet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/delete_button_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>