<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.goalmaster.task.view.edit.EditTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_task_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/editTaskAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/editTaskToolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_detail_back_no_circle"
                app:title="@string/edit_Task_title"
                tools:title="@string/edit_Task_title">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editTaskSaveButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/save_button_text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTaskAppbar"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTaskGoalInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="40dp"
                    android:enabled="false"
                    android:hint="@string/create_task_goal_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTaskGoalInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="no"
                        android:background="@color/fluorescent_grey"
                        android:inputType="textCapSentences"
                        android:text="@{vm.goalName}"
                        tools:ignore="TextContrastCheck"
                        tools:text="AI book" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTaskNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/name_placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTaskGoalInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTaskNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="no"
                        android:background="@color/fluorescent_grey"
                        android:inputType="textCapSentences"
                        android:text="@={vm.name}"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTaskUnitSizeInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/task_unit_size_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/editTaskNameInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTaskUnitSizeInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/fluorescent_grey"
                        android:inputType="number"
                        android:text="@={vm.unitSize}"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTaskDodInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/dod_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/editTaskUnitSizeInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTaskDodInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/fluorescent_grey"
                        android:text="@={vm.dod}"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTaskDurationInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/duration_placeholder"
                    android:inputType="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTaskDodInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTaskDurationInput"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:autofillHints="no"
                        android:background="@color/fluorescent_grey"
                        android:inputType="none"
                        android:focusable="false"
                        android:text="@{vm.duration.toString()}"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTaskDescriptionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/description_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="150"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTaskDurationInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:autofillHints="no"
                        android:background="@color/fluorescent_grey"
                        android:text="@={vm.description}"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:layout_constraintTop_toBottomOf="@id/editTaskDescriptionInputLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editTaskDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/oval_background_1"
                    android:elevation="8dp"
                    android:paddingStart="110dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="110dp"
                    android:paddingBottom="15dp"
                    android:text="@string/delete_button_text"
                    app:backgroundTint="@color/space_cadet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/delete_button_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>